# minigrep

./: .gitignore  Cargo.toml  README.org  flake.nix
scripts/: bench
src/: lib.rs  main.rs
