[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
color-print = "0.3.6"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
